--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     background-color: rebeccapurple;
-    color: white;
+    color:white;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -16,13 +16,15 @@ body {
 }
 
 .pw-container {
-    background-color: black;
+    background-color:white;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
     min-width: 400px;
+
 }
 
 .pw-header {
     padding: 1rem;
+    
 }
 
 .pw {
@@ -38,7 +40,7 @@ body {
 }
 
 .pw button {
-    background-color: white;
+    background-color:white;
     border: none;
     color: rgb(29, 2, 56);
     cursor: pointer;
@@ -63,7 +65,7 @@ body {
 }
 
 .form-control {
-    color: #eee;
+    color:black;
     display: flex;
     justify-content: space-between;
     margin: 0.75rem 0;
